# quasar

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: build.rs  cfg.rs  config.rs  idl.rs  init.rs  keys.rs  lib.rs  test.rs
cli/src/init/: banner.rs  mod.rs  scaffold.rs  templates.rs
core/: Cargo.toml
core/src/: borsh.rs  context.rs  entrypoint.rs  event.rs  lib.rs  pda.rs  prelude.rs  traits.rs
core/src/checks/: address.rs
core/src/cpi/: mod.rs
core/src/sysvars/: clock.rs  mod.rs  rent.rs
core/tests/: miri.rs
core/tests/compile_fail/: dynamic_vec_alignment.rs
derive/src/: account.rs  accounts.rs  error_code.rs  event.rs  helpers.rs  instruction.rs  lib.rs  program.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs
derive/src/accounts/: attrs.rs  field_kind.rs  fields.rs  fields_process.rs  init.rs  mod.rs
docs/: cli.md
examples/escrow/: Cargo.toml
examples/escrow/src/: lib.rs  tests.rs
examples/multisig/: Cargo.toml
examples/multisig/src/: client.rs  (+2 more)
examples/upstream-vault/: Cargo.toml
examples/vault/: Cargo.toml
idl/: Cargo.toml
idl/src/: codegen.rs  lib.rs
idl/tests/: lint.rs  parser.rs
lang/: Cargo.toml
lang/src/: borsh.rs  context.rs  entrypoint.rs  lib.rs  remaining.rs  traits.rs
lang/tests/: parse_accounts.rs
pod/: Cargo.toml
profile/src/: dwarf.rs  lib.rs  main.rs  output.rs  serve.rs
spl/: Cargo.toml
spl/src/: cpi.rs  init.rs  lib.rs  validate.rs
(+82 files in other folders)
